<resources>
    <string name="app_name">No Shopping in PL</string>
    <string name="day_of_limited_commerce">Day of trade restrictions</string>
    <string name="days_of_limited_commerce">Days of trade restrictions</string>
    <string name="holidays">Public holidays</string>
    <string name="whole_day">Whole\nday</string>
    <string name="since">"Since\n"</string>
    <string name="title_choose_events">Events to be added to calendar</string>
    <string name="info_added_to_calendar">Added to calendar</string>
    <string name="error_adding_to_calendar_failed">Error\nNot added to calendar</string>
    <string name="error_sth_went_wrong">Error\nSomething went wrong</string>
    <string name="title_add_to_calendar">Add to calendar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>

    <string name="include_holidays_preference_key" translatable="false">include_holidays</string>
    <string name="title_show_holidays">Show holidays</string>
    <string name="summary_show_holidays_on">Show holidays on the list</string>
    <string name="summary_show_holidays_off">Don\'t show holidays on the list</string>

    <string name="include_non_commerce_days_preference_key" translatable="false">include_non_commerce_days</string>
    <string name="title_show_non_commerce_days">Show non commerce days</string>
    <string name="summary_show_non_commerce_days_on">Show non commerce days on the list</string>
    <string name="summary_show_non_commerce_days_off">Don\'t show non commerce days on the list</string>

    <string name="include_commerce_sundays_preference_key" translatable="false">include_commerce_sundays</string>
    <string name="title_show_commerce_sundays">Show commerce Sundays</string>
    <string name="summary_show_commerce_sundays_on">Show commerce Sundays on the list</string>
    <string name="summary_show_commerce_sundays_off">Don\'t show commerce Sundays on the list</string>

    <string name="remind_me">Remind me</string>
    <string name="days_before">day(s) before</string>
    <string name="days">day(s)</string>
    <string name="before_comma_at">before, at</string>
    <string name="comma" translatable="false">,</string>
    <string name="till">of days till</string>
    <string name="dot" translatable="false">.</string>
    <string name="set_as_default">set as default</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_reminder_of">Reminder of:</string>
    <string name="go_shopping_earlier">go shopping earlier!</string>
    <string name="go_shopping">go shopping!</string>

    <string name="app_look_preference_key" translatable="false">app_look</string>
    <string name="title_app_look">App look</string>
    <string name="summary_app_look_mini">Mini</string>
    <string name="summary_app_look_rich">Rich</string>

    <string name="ask_for_look">"\nChoose your preferred look. \nYou may change it later in Settings. "</string>

    <string name="pref_header_look">Look</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="commerce_sundays">Commerce Sundays</string>

    <string name="help_text_1">Since 2018, the law introducing trade restrictions on most Sundays and selected
        days has come into force in Poland. Only shops at railway, bus and petrol stations, and some small
        shops can be open at that time.</string>
    <string name="help_text_2">With this app you can view a list of such days, holidays and commercial
        Sundays. Which types of these elements will be shown in the list can be changed in Settings (the tool icon
        in the top bar).</string>
    <string name="help_text_3">It is also possible to add these events, along with reminders about them, to the calendar selected in the Settings (in newer versions of Android this requires granting the application access to the Calendar). Such calendars can be added at <a href="https://calendar.google.com/calendar/r">calendar.google.com/calendar/r</a> (+ right to Add a friends calendar, at the desktop site, not mobile!). You can add selected event types up to a specific date (the calendar icon in the top bar), or individual events (by touching any list element).</string>
    <string name="help_text_4">When adding events, you can temporarily change the reminders settings for them.
        The default values for reminders can be changed in the Settings.</string>
    <string name="help_text_5">A day added to the calendar can be deleted from it by swiping a given list item to the side.</string>

    <string name="title_delete_events">Delete reminders</string>
    <string name="summary_delete_events">Removes all events added by this app from chosen calendars</string>
    <string name="key_delete_events" translatable="false">delete_events</string>

    <string name="key_app_widget_info_displayed" translatable="false">app_widget_info_displayed</string>

    <string name="key_app_widget_text_size" translatable="false">key_app_widget_text_size</string>
    <string name="title_app_widget_text_size">App widget text size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="key_use_pl_time_zone" translatable="false">use_pl_time_zone</string>
    <string name="title_time_zone">Time zone</string>
    <string name="summary_use_pl_time_zone_on">Use the Polish time zone</string>
    <string name="summary_use_pl_time_zone_off">Use my time zone</string>

    <string name="info_deleted">Deleted</string>
    <string name="info_about_app_widget">You can add app widget to your home screen.</string>
    <string name="privacy_policy_link"><a href="https://www.adamgiergun.eu/privacy_policy/privacy-policy-for-no-shopping-in-pl">Privacy Policy</a></string>
</resources>
