<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="eu.adamgiergun.wontgoshoppingpl.main.viewModel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ask_for_look" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonMini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/summary_app_look_mini"
                android:onClick="@{(imageButton) -> mainViewModel.onInitialLookChoice(imageButton.id)}"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/look_mini" />

            <ImageButton
                android:id="@+id/imageButtonRich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/summary_app_look_rich"
                android:onClick="@{(imageButton) -> mainViewModel.onInitialLookChoice(imageButton.id)}"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/look_rich" />
        </LinearLayout>
    </LinearLayout>
</layout>