<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="eu.adamgiergun.wontgoshoppingpl.main.viewModel.DaysFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/reminder_view_padding"
        android:paddingLeft="@dimen/reminder_view_padding"
        android:paddingEnd="@dimen/reminder_view_padding"
        android:paddingRight="@dimen/reminder_view_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/spacer1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/reminder_dialog_spacing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfDaysBeforePrefix"
            style="@style/MyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/remind_me"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spacer1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfDaysBeforeView"
            style="@style/MyEditTextStyle"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:cursorVisible="false"
            android:inputType="number"
            android:onClick="showDialog"
            android:text="@{String.valueOf(viewModel.reminderDaysBefore)}"
            app:layout_constraintLeft_toRightOf="@+id/numberOfDaysBeforePrefix"
            app:layout_constraintTop_toBottomOf="@id/spacer1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfDaysBeforeSuffix"
            style="@style/MyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            app:layout_constraintLeft_toRightOf="@+id/numberOfDaysBeforeView"
            app:layout_constraintTop_toBottomOf="@id/spacer1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/reminder_dialog_spacing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberOfDaysBeforeSuffix" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timeViewPrefix"
            style="@style/MyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before_comma_at"
            app:layout_constraintRight_toLeftOf="@id/timeView"
            app:layout_constraintTop_toBottomOf="@id/spacer2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timeView"
            style="@style/MyEditTextStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="time"
            android:onClick="showDialog"
            android:text="@{viewModel.reminderTime.toString()}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/spacer3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/reminder_dialog_spacing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tillDatePrefix"
            style="@style/MyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/till"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spacer3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tillDateView"
            style="@style/MyEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:cursorVisible="false"
            android:inputType="number"
            android:onClick="showDialog"
            android:text="@{viewModel.tillDate.toString()}"
            app:layout_constraintLeft_toRightOf="@+id/tillDatePrefix"
            app:layout_constraintTop_toBottomOf="@id/spacer3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tillDateSuffix"
            style="@style/MyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            app:layout_constraintLeft_toRightOf="@+id/tillDateView"
            app:layout_constraintTop_toBottomOf="@+id/spacer3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>